src/objects/Function_Contact__c.object
<CustomObject>
    <description>Junction object to link contacts and corporate functions</description>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the person actually attended the event.</description>
        <inlineHelpText>True if the person actually attended the event.</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Function Contacts</relationshipLabel>
        <relationshipName>Function_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Function_Status__c</fullName>
        <description>Status of the person with respect to the corporate function.</description>
        <inlineHelpText>Status of the person with respect to the corporate function.</inlineHelpText>
        <label>Function Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                    <label>Undecided / No Response</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <referenceTo>Function__c</referenceTo>
        <relationshipLabel>Function Contacts</relationshipLabel>
        <relationshipName>Function_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Join_Time__c</fullName>
        <label>Join Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Leave_Time__c</fullName>
        <label>Leave Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Panelist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the contact a panelist in this corporate function?</description>
        <label>Panelist</label>
        <type>Checkbox</type>
    </fields>
    <label>Function Contact</label>
    <nameField>
        <displayFormat>FC-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Function Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>